--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,9 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
 
-    implementation "androidx.preference:preference:1.1.0-alpha04"
+//    implementation "androidx.preference:preference:1.1.0-alpha04"
+//    implementation 'com.android.support:preference-v7:26.0.0'
+    implementation "com.android.support:preference-v7:28.0.0"
 
     // For Room. X.X.X is version of room.
     implementation "androidx.room:room-runtime:2.0.0"
@@ -57,4 +59,5 @@ dependencies {
 //    implementation "androidx.room:room-guava:2.0.0"
     // Test helpers
     testImplementation "androidx.room:room-testing:2.0.0"
+
 }
