--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     // Test helpers
     testImplementation "androidx.room:room-testing:2.0.0"
 
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 }
