--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     testImplementation "androidx.room:room-testing:2.0.0"
 
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.github.fafaldo:fab-toolbar:1.2.0'
 }
