--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.fafaldo:fab-toolbar:1.2.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
